--- a/bin/install
+++ b/bin/install
@@ -1,6 +1,9 @@
 #!/usr/bin/env bash
 
 set -euo pipefail
+if [[ "${ASDF_ODO_VERBOSE:-false}" == "true" ]]; then
+  set -x
+fi
 
 current_script_path=${BASH_SOURCE[0]}
 plugin_dir=$(dirname "$(dirname "$current_script_path")")
