--- a/bin/install
+++ b/bin/install
@@ -11,4 +11,15 @@ plugin_dir=$(dirname "$(dirname "$current_script_path")")
 # shellcheck source=../lib/utils.bash
 source "${plugin_dir}/lib/utils.bash"
 
-install_version "$ASDF_INSTALL_TYPE" "$ASDF_INSTALL_VERSION" "$ASDF_INSTALL_PATH"
+version="$ASDF_INSTALL_VERSION"
+if [[ "$ASDF_INSTALL_TYPE" == "ref" ]] && [[ "$ASDF_INSTALL_VERSION" == */* ]]; then
+  # This fixes an issue (in asdf itself) when version contains a '/'.
+  log_verbose "encoding slash characters in ASDF_INSTALL_VERSION variable ($ASDF_INSTALL_VERSION) as a workaround to https://github.com/rm3l/asdf-odo/issues/2"
+  export ASDF_INSTALL_VERSION=$(echo "$ASDF_INSTALL_VERSION" | sed 's/\//%2F/g')
+fi
+version_sanitized="$ASDF_INSTALL_VERSION"
+
+export ASDF_DOWNLOAD_PATH="${XDG_CACHE_HOME:-${HOME}/.cache}/asdf-odo/downloads/odo/${ASDF_INSTALL_VERSION}"
+export ASDF_INSTALL_PATH="${XDG_CACHE_HOME:-${HOME}/.cache}/asdf-odo/installs/odo/${ASDF_INSTALL_VERSION}"
+
+install_version "$ASDF_INSTALL_TYPE" "$version" "$version_sanitized" "$ASDF_INSTALL_PATH"
